Feature: cart page

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -492,6 +492,7 @@ body {
 
       @media screen and (min-width: $large-phone) {
         padding-left: 110px;
+        margin-top: -30px;
       }
 
       input {
