Chore: minor fix for cart button text

--- a/src/styles/templates/cart.scss
+++ b/src/styles/templates/cart.scss
@@ -43,6 +43,7 @@
     font-weight: bold;
     letter-spacing: 1.2px;
     min-height: 42px;
+    line-height: 30px;
     font-size: 16px;
     width: 100%;
     text-transform: uppercase;
