Chore: fix add to cart animation

--- a/src/styles/sections/cart-control.scss
+++ b/src/styles/sections/cart-control.scss
@@ -58,6 +58,10 @@
       color: white
     }
 
+    &:disabled {
+      background-color: #0090fc;
+    }
+
     .checkmark {
       position: absolute;
       top: 0;
