--- a/src/styles/theme.scss.liquid
+++ b/src/styles/theme.scss.liquid
@@ -4,3 +4,43 @@
  * Import additional stylesheets into this sheet using CSS imports:
  * @import url('./global/form.scss');
  */
+
+.btn {
+  background-color: {{ settings.btn_color }};
+  border-color: {{ settings.btn_color }};
+  color: {{ settings.btn_text_color }};
+
+  &:hover {
+    background-color: {{ settings.btn_hover_color }};
+    border-color: {{ settings.btn_hover_color }};
+  }
+
+  &.invert {
+    background-color: #fff;
+    border: 1px solid {{ settings.btn_color }};
+    color: {{ settings.btn_color }};
+
+    &:hover {
+      background-color: {{ settings.btn_color }};
+      border-color: {{ settings.btn_color }};
+      color: #fff;
+
+      a {
+        background-color: {{ settings.btn_color }};
+        border-color: {{ settings.btn_color }};
+        color: #fff;
+      }
+    }
+
+    a {
+      background-color: #fff;
+      border: {{ settings.btn_color }};
+      color: {{ settings.btn_color }};
+
+      &:hover {
+        background-color: {{ settings.btn_color }};
+        border-color: {{ settings.btn_color }};
+      }
+    }
+  }
+}
