--- a/src/templates/page.liquid
+++ b/src/templates/page.liquid
@@ -1,5 +1,14 @@
-<h1>{{ page.title }}</h1>
-
-<div class="rte">
-  {{ page.content }}
+<div class="section page">
+  <div class="container">
+    <div class="columns">
+      <div class="column title">
+        <h1>{{ page.title }}</h1>
+      </div>
+    </div>
+    <div class="columns">
+      <div class="column rte">
+        {{ page.content }}
+      </div>
+    </div>
+  </div>
 </div>
