Feature: blog related pages

--- a/src/snippets/social-buttons.liquid
+++ b/src/snippets/social-buttons.liquid
@@ -33,7 +33,7 @@
 
 {% endcapture %}
 
-{% if social-buttons == 'article' and section.settings.display_social_buttons  %}
+{% if social-buttons == 'article'  %}
   <div class="share-article">
     {{ buttons }}
   </div>
