--- a/src/sections/footer.liquid
+++ b/src/sections/footer.liquid
@@ -1,4 +1,4 @@
-<footer>
+<footer v-cloak>
   <div class="go-to-top">
     <a v-scroll-to="'body'">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 100 100" id="Layer_1" version="1.1" viewBox="0 0 100 100" xml:space="preserve"><polygon fill="#010101" points="22.4,64.1 50.8,36.5 79.3,64.1 80.8,63.2 50.8,34.1 20.8,63.2 22.4,64.1 "/></svg>
@@ -63,7 +63,7 @@
       <div class="clearfix"></div>
     </div>
   </div>
-
+  <!--
   <div class="footer-bottom">
     <div class="container">
       {% if section.settings.bottom_links != blank %}
@@ -80,6 +80,7 @@
       {% endif %}
     </div>
   </div>
+  -->
 </footer>
 
 {% schema %}
