--- a/src/styles/sections/faq.scss
+++ b/src/styles/sections/faq.scss
@@ -1,3 +1,6 @@
+@import "~bulma/sass/utilities/initial-variables.sass";
+@import "../variables.scss";
+
 .section.faq {
   background-color: #fff;
   padding: 100px 0;
