--- a/src/styles/templates/search.scss
+++ b/src/styles/templates/search.scss
@@ -210,6 +210,112 @@
 
         }
       }
+
+      .product-row {
+        margin: 0;
+
+        img {
+
+        }
+
+        h5 {
+          font-family: neuzeit_grotesk_regular;
+          font-size: 18px;
+          font-weight: bold;
+          font-style: normal;
+          text-transform: none;
+          line-height: 1.5;
+          letter-spacing: 2px;
+          margin-bottom: 0.6em;
+
+          @media screen and (min-width: $tablet) {
+            font-size: 23px;
+          }
+
+          a {
+            color: #333333;
+          }
+        }
+
+        .info {
+          span {
+            position: relative;
+            display: inline-block;
+            margin-right: 15px;
+            font-size: smaller;
+            color: #333;
+            font-family: 'neuzeit_grotesk_light';
+            font-size: 15px;
+          }
+        }
+
+        .blog-meta {
+          span {
+            position: relative;
+            display: inline-block;
+            margin-right: 15px;
+            font-size: smaller;
+            color: #8c8b8b;
+          }
+          margin-bottom: 1em;
+        }
+
+        .excerpt {
+          line-height: 1.5;
+          margin: 0 0 1em;
+
+          &.excerpt-product {
+            margin-bottom: 0;
+          }
+
+          span {
+            font-family: 'neuzeit_grotesk_light';
+            font-size: 15px;
+            color: #333333;
+          }
+
+          a {
+            color: #03a196;
+          }
+        }
+
+        .read-more {
+          a {
+            color: #03a196;
+            font-family: 'neuzeit_grotesk_light';
+            font-size: 15px;
+          }
+        }
+
+        .icon-right-arrow {
+          color: #03a196;
+          text-decoration: none;
+          position: relative;
+          &:before {
+            content: "\e911";
+            font-family: "turbo";
+            display: inline-block;
+            width: 1em;
+            line-height: 1em;
+            margin-left: .15em;
+          }
+        }
+      }
+
+      hr {
+        background-color: #333;
+        margin: 1.5em 0;
+      }
+
+      .no-img {
+        h5 {
+          margin-bottom: 0;
+        }
+
+        .excerpt {
+          margin: 0;
+        }
+      }
     }
 
     .collection-pagination {
