--- a/src/templates/404.liquid
+++ b/src/templates/404.liquid
@@ -1,2 +1,14 @@
-<h1>{{ 'general.404.title' | t }}</h1>
-<p>{{ 'general.404.subtext_html' | t }}</p>
+<div class="section page-404">
+  <div class="container">
+    <h1>{{ 'general.404.title' | t }}</h1>
+    <div class="columns">
+      <div class="column">
+        <p>{{ 'general.404.subtext' | t }}</p>
+        <form class="search" action="/search">
+          <p>{{ 'general.404.continue_shopping_html' | t }}</p>
+          <input type="text" name="q" class="search_box" placeholder="{{ 'general.search.placeholder' | t }}"  value="{{ search.terms }}" />
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
