Chore: adjust add to cart text size

--- a/src/styles/sections/cart-control.scss
+++ b/src/styles/sections/cart-control.scss
@@ -80,6 +80,11 @@
     span {
       animation-duration: 0.8s;
       animation-name: fadeInDown;
+      font-size: 16px;
+
+      @media screen and (min-width: $tablet) {
+        font-size: 18px;
+      }
     }
 
     &.loading {
